--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -31,8 +31,8 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: | 
-          export aws_access_key_id= ${{secrets.aws_access_key_id}}
-          export aws_secret_access_key= ${{secrets.aws_secret_access_key
+          export aws_access_key_id= ${{ secrets.aws_access_key_id }}
+          export aws_secret_access_key= ${{ secrets.aws_secret_access_key }}
 
           echo $aws_access_key_id
           echo $aws_secret_access_key
