--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -9,8 +9,8 @@ permissions:
   contents: read
 
 env:
-  aws_access_key_id=${{secrets.AWS_ACCESS_KEY_ID}}
-  aws_secret_access_key=${{secrets.AWS_SECRET_ACCESS_KEY}}
+  aws_access_key_id: ${{secrets.AWS_ACCESS_KEY_ID}}
+  aws_secret_access_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
   
 
 jobs:
