changed working dir

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -19,12 +19,14 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     
+    
 
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
         shell: bash
+        working-directory: terraformproviders
 
     steps:
     # Checkout the repository to the GitHub Actions runner
