--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,8 +5,6 @@ on:
     branches: [ "main" ]
   pull_request:
 
-permissions:
-  contents: read
 
 env:
   aws_access_key_id: ${{secrets.AWS_ACCESS_KEY_ID}}
@@ -26,7 +24,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: terraformproviders
+        working-directory: ./terraformproviders
 
     steps:
     # Checkout the repository to the GitHub Actions runner
